# easy45

./: .gitignore  .zenodo.json  CITATION.cff  README.md  environment.yml  pyproject.toml
docs/: pipeline.dot  pipeline.md
recipe/: meta.yaml
scripts/: make_default_anchor.py
src/easy45/: __init__.py  batch.py  cli.py  config.py  external.py  io.py  pipeline.py  report.py  variant.py
src/easy45/data/: ANCHOR_PROVENANCE.md
src/easy45/stages/: __init__.py  annotate.py  boundary.py  cluster.py  consensus.py  extract.py  igs.py  prefilter.py  recruit.py
tests/: test_skeleton.py  test_variant.py
